fix: some user images could be distorted at userCard, setted width and heigth to their avatars

--- a/Front-End/src/components/UserCard/UserCard.css
+++ b/Front-End/src/components/UserCard/UserCard.css
@@ -55,7 +55,8 @@ p {
 
 .card .round {
 	border: 3px solid #b761bc;
-  width: 50%;
+  width: 180px;
+  height: 180px;
 	border-radius: 50%;
   margin: 25px 0 25px 0;
   background-color: #1db954;
